src/objects/inscor__ASN_Line__c.object
<CustomObject>
    <fields>
        <fullName>EAD__c</fullName>
        <inlineHelpText>Estimated Arrival Date per carrier</inlineHelpText>
        <label>EAD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship Method</label>
        <referenceTo>inscor__Ship_Method__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZK_EAD__c</fullName>
        <formula>inscor__ASN__r.ZK_EAD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZK EAD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__ASN__c</fullName>
        <label>ASN</label>
        <referenceTo>inscor__ASN__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inscor__AWB__c</fullName>
        <formula>inscor__ASN__r.inscor__Tracking_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AWB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__PO_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Qty_Shipped__c</fullName>
        <label>Qty Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__RO_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RO Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RO</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipLabel>ASN Lines</relationshipLabel>
        <relationshipName>ASN_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASN Line</label>
    <nameField>
        <displayFormat>ASNL-{0}</displayFormat>
        <label>ASN Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASN Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>